Clean up repository - remove scripts and placeholder contact info
- Removed cleanup scripts (remove-personal-info.sh)
- Removed workspace files (*.code-workspace)
- Updated .gitignore to exclude these file types
- Cleaned PORTFOLIO-SUMMARY.md header (removed placeholder contact info)

--- a/.gitignore
+++ b/.gitignore
@@ -69,3 +69,9 @@ career/
 *CoverLetter.md
 *personal*.md
 .claude/
+
+# Scripts and workspace files (not for public)
+remove-personal-info.sh
+cleanup-*.sh
+start-fresh-*.sh
+*.code-workspace
